// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckMarkGroup Uncontrolled CheckMark Group snapshot 1`] = `
<DocumentFragment>
  <div
    class="styles__CheckMarkGroupWrapper-sc-1fq4v65-2 inuXUj"
    data-orientation="horizontal"
    data-testid="checkMarkGroupFruit"
    role="radiogroup"
  >
    <div
      class="styles__CheckMarkOptionWrapper-sc-1fq4v65-1 wQJlk"
      data-checkmark-position="left"
    >
      <div
        class="styles__CheckMarkWrapper-sc-1fq4v65-0 gWIoqZ"
      >
        <input
          data-label="Apple"
          id="checkMarkOption_fruit_Apple"
          name="fruit"
          readonly=""
          type="radio"
          value="apple"
        />
        <svg
          class="fk-icon"
          color=""
          height="16px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Check
          </title>
          <path
            d="m378-332 363-363q9.067-9 21.533-9Q775-704 784-694.947q9 9.052 9 21.5Q793-661 784-652L399-267q-9 9-21 9t-21-9L175-449q-9-9.067-8.5-21.533Q167-483 176.053-492q9.052-9 21.5-9Q210-501 219-492l159 160Z"
          />
        </svg>
      </div>
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="checkMarkOption_fruit_Apple"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmDaWL"
          >
            Apple
          </span>
        </div>
      </label>
    </div>
    <div
      class="styles__CheckMarkOptionWrapper-sc-1fq4v65-1 wQJlk"
      data-checkmark-position="left"
    >
      <div
        class="styles__CheckMarkWrapper-sc-1fq4v65-0 gWIoqZ"
      >
        <input
          checked=""
          data-label="Orange"
          id="checkMarkOption_fruit_Orange"
          name="fruit"
          readonly=""
          type="radio"
          value="orange"
        />
        <svg
          class="fk-icon"
          color=""
          height="16px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Check
          </title>
          <path
            d="m378-332 363-363q9.067-9 21.533-9Q775-704 784-694.947q9 9.052 9 21.5Q793-661 784-652L399-267q-9 9-21 9t-21-9L175-449q-9-9.067-8.5-21.533Q167-483 176.053-492q9.052-9 21.5-9Q210-501 219-492l159 160Z"
          />
        </svg>
      </div>
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="checkMarkOption_fruit_Orange"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmDaWL"
          >
            Orange
          </span>
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckMarkGroup controlled CheckMark Group snapshot 1`] = `
<DocumentFragment>
  <div
    class="styles__CheckMarkGroupWrapper-sc-1fq4v65-2 inuXUj"
    data-orientation="horizontal"
    data-testid="checkMarkGroupVehicle"
    role="radiogroup"
  >
    <div
      class="styles__CheckMarkOptionWrapper-sc-1fq4v65-1 wQJlk"
      data-checked="false"
      data-checkmark-position="left"
    >
      <div
        class="styles__CheckMarkWrapper-sc-1fq4v65-0 gWIoqZ"
      >
        <input
          data-label="Cycle"
          id="checkMarkOption_vehicle_Cycle"
          name="vehicle"
          readonly=""
          type="radio"
          value="cycle"
        />
        <svg
          class="fk-icon"
          color=""
          height="16px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Check
          </title>
          <path
            d="m378-332 363-363q9.067-9 21.533-9Q775-704 784-694.947q9 9.052 9 21.5Q793-661 784-652L399-267q-9 9-21 9t-21-9L175-449q-9-9.067-8.5-21.533Q167-483 176.053-492q9.052-9 21.5-9Q210-501 219-492l159 160Z"
          />
        </svg>
      </div>
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="checkMarkOption_vehicle_Cycle"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmDaWL"
          >
            Cycle
          </span>
        </div>
      </label>
    </div>
    <div
      class="styles__CheckMarkOptionWrapper-sc-1fq4v65-1 wQJlk"
      data-checked="true"
      data-checkmark-position="left"
    >
      <div
        class="styles__CheckMarkWrapper-sc-1fq4v65-0 gWIoqZ"
      >
        <input
          checked=""
          data-label="Bike"
          id="checkMarkOption_vehicle_Bike"
          name="vehicle"
          readonly=""
          type="radio"
          value="bike"
        />
        <svg
          class="fk-icon"
          color=""
          height="16px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Check
          </title>
          <path
            d="m378-332 363-363q9.067-9 21.533-9Q775-704 784-694.947q9 9.052 9 21.5Q793-661 784-652L399-267q-9 9-21 9t-21-9L175-449q-9-9.067-8.5-21.533Q167-483 176.053-492q9.052-9 21.5-9Q210-501 219-492l159 160Z"
          />
        </svg>
      </div>
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="checkMarkOption_vehicle_Bike"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmDaWL"
          >
            Bike
          </span>
        </div>
      </label>
    </div>
    <div
      class="styles__CheckMarkOptionWrapper-sc-1fq4v65-1 wQJlk"
      data-checked="false"
      data-checkmark-position="left"
      data-disabled="true"
    >
      <div
        class="styles__CheckMarkWrapper-sc-1fq4v65-0 gWIoqZ"
      >
        <input
          data-label="Car"
          disabled=""
          id="checkMarkOption_vehicle_Car"
          name="vehicle"
          readonly=""
          type="radio"
          value="car"
        />
        <svg
          class="fk-icon"
          color=""
          height="16px"
          style="fill: currentColor; stroke: currentColor;"
          viewBox="0 -960 960 960"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Check
          </title>
          <path
            d="m378-332 363-363q9.067-9 21.533-9Q775-704 784-694.947q9 9.052 9 21.5Q793-661 784-652L399-267q-9 9-21 9t-21-9L175-449q-9-9.067-8.5-21.533Q167-483 176.053-492q9.052-9 21.5-9Q210-501 219-492l159 160Z"
          />
        </svg>
      </div>
      <label
        aria-disabled="true"
        class="style__LabelWrapper-sc-n7qfg8-0 hFkWdI"
        data-testid=""
        disabled=""
        for="checkMarkOption_vehicle_Car"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="true"
            class="style__LabelText-sc-n7qfg8-1 dTZBQc"
            disabled=""
          >
            Car
          </span>
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
